@@ -1,3 +1,8 @@
+2005-02-02  Davide Viti  <zinosat@tiscali.it>
+
+	* build_index.sh: added a column, for each language,
+	containing the dictionary utilized
+
 2005-01-27  Davide Viti  <zinosat@tiscali.it>
 
 	* check_dit.sh: master files are spellchecked only when
